jlamontSC-test/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID( Contact.Account.Id )</formula>
        <label>Account Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CORE_Campaign_Member_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CORE Campaign Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Attempts_Made__c</fullName>
        <description>Number of times that attempts were made to contact this constituent during the campaign.</description>
        <label>Contact Attempts Made</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID( Contact.Id )</formula>
        <label>Contact Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_External_ID__c</fullName>
        <formula>Contact.External_ID__c</formula>
        <label>Contact External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Public_Token__c</fullName>
        <formula>Contact.rC_Connect__Public_Token__c</formula>
        <label>Contact Public Token</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Response__c</fullName>
        <label>Custom Field 1 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Response__c</fullName>
        <label>Custom Field 2 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Response__c</fullName>
        <label>Custom Field 3 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Downloaded__c</fullName>
        <description>Date the record was downloaded to Club, to distinguish which have not yet been downloaded</description>
        <label>Date Downloaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_RSVP__c</fullName>
        <label>Event RSVP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Three__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Three</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Status_Text__c</fullName>
        <description>Converts picklist value to text, for reports</description>
        <formula>TEXT(Status)</formula>
        <label>Member Status (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <description>AnselGroup LtSourceType LongDesc lookup</description>
        <label>Source Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Test Status</fullName>
                </value>
                <value>
                    <fullName>test value 1</fullName>
                </value>
                <value>
                    <fullName>test value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwac__EOCS_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to record of action taken</inlineHelpText>
        <label>Action Taken</label>
        <referenceTo>kweos__EOCS_Data__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kwac__Encrypted_Link__c</fullName>
        <inlineHelpText>To increase security, you can pass in an encrypted link containing the Campaign and Contact Id</inlineHelpText>
        <label>Encrypted Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwac__Link_to_External_Action_Page__c</fullName>
        <formula>IF (NOT(ISBLANK(ContactId)) &amp;&amp; NOT(ISBLANK( Contact.kwzd__KWD_Encrypted_Action_Id__c)), 
     HYPERLINK( Campaign.kwac__Public_URL__c+&quot;?actionId=&quot;+ Campaign.kwac__Action_Request2_Id__c + &quot;&amp;cid=&quot; + Contact.kwzd__KWD_Encrypted_Action_Id__c, &quot;Link to External Page&quot; , &quot;_blank&quot;),

IF (NOT(ISBLANK(LeadId)) &amp;&amp; NOT(ISBLANK( Lead.kwzd__KWD_Encrypted_Action_Id__c)), 
     HYPERLINK( Campaign.kwac__Public_URL__c+&quot;?actionId=&quot;+ Campaign.kwac__Action_Request2_Id__c + &quot;&amp;cid=&quot; + Lead.kwzd__KWD_Encrypted_Action_Id__c, &quot;Link to External Page&quot; , &quot;_blank&quot;),
 
     HYPERLINK( Campaign.kwac__Public_URL__c+&quot;?actionId=&quot;+ Campaign.kwac__Action_Request2_Id__c, &quot;Link to External Page&quot; , &quot;_blank&quot;)
  )
  )</formula>
        <label>Link to External Action Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Ask_1_Amount__c</fullName>
        <label>Ask 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Ask_2_Amount__c</fullName>
        <label>Ask 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Ask_3_Amount__c</fullName>
        <label>Ask 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Campaign_Ask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Ask</label>
        <referenceTo>rC_Connect__Campaign_Ask__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Has_Volunteered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, indicates the Campaign Member &apos;Has Volunteered.&quot;</description>
        <inlineHelpText>Indicates the Campaign Member &apos;Has Volunteered.&quot;</inlineHelpText>
        <label>Has Volunteered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Hours_Voluntered__c</fullName>
        <description>Manually populated, indicates the number of &quot;Hours Volunteered.&quot;</description>
        <inlineHelpText>Indicates the number of &quot;Hours Volunteered.&quot;</inlineHelpText>
        <label># Hours Voluntereed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Public_Token__c</fullName>
        <description>Manually or automatically populated, used by external middleware to public and uniquely identify the campaign member record, without publicly exposing Salesforce IDs. Typically a random SHA256 or MD5.</description>
        <inlineHelpText>&quot;Public Token&quot; of the campaign member.</inlineHelpText>
        <label>Public Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Attendance_Date__c</fullName>
        <description>Auto populated, indicates the date on which the Campaign Member attended the Event.</description>
        <inlineHelpText>Date on which the Campaign Member attended the Event.</inlineHelpText>
        <label>Attendance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Attendance_Status__c</fullName>
        <description>Auto populated, indicates the status of the Campaign Member attending the Event.</description>
        <inlineHelpText>Status of the Campaign Member attending the Event.</inlineHelpText>
        <label>Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_City__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing City.</description>
        <inlineHelpText>Campaign Member&apos;s Billing City.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Country__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Country.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Country.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Postal_Code__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Postal Code.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Postal Code.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_State__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing State/Province.</description>
        <inlineHelpText>Campaign Member&apos;s Billing State/Province.</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street_Line_1__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Street 1.</inlineHelpText>
        <label>Billing Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street_Line_2__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Street 2</inlineHelpText>
        <label>Billing Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <formula>TRIM(IF(AND(ISBLANK(rC_Event__Billing_Street_Line_1__c), ISBLANK(rC_Event__Billing_Street_Line_2__c)), &apos;&apos;, IF(AND(ISBLANK(rC_Event__Billing_Street_Line_1__c)), rC_Event__Billing_Street_Line_2__c, rC_Event__Billing_Street_Line_1__c + &apos;, &apos; + rC_Event__Billing_Street_Line_2__c)))</formula>
        <inlineHelpText>Campaign Member&apos;s Billing Street.</inlineHelpText>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the first Campaign Group this member belongs to.</description>
        <inlineHelpText>First Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 1</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 1)</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the second Campaign Group this member belongs to.</description>
        <inlineHelpText>Second Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 2</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 2)</relationshipLabel>
        <relationshipName>Campaign_Members_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the third Campaign Group this member belongs to.</description>
        <inlineHelpText>Third Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 3</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 3)</relationshipLabel>
        <relationshipName>Campaign_Members_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Expiration_Month__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Expiration Month.</description>
        <inlineHelpText>Charge Card&apos;s Expiration Month.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Expiration_Year__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Expiration Year.</description>
        <inlineHelpText>Charge Card&apos;s Expiration Year.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Holder_Name__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Cardholder Name.</description>
        <inlineHelpText>Charge Card&apos;s Cardholder Name.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Number__c</fullName>
        <description>Manually populated, this field shows a Charge Card number. Exclude spaces and dashes when entering.</description>
        <inlineHelpText>Charge Card number. Exclude spaces and dashes when entering.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>18</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Security_Code__c</fullName>
        <description>Manually populated, this field contains the 3 digit Security Code found on the back of a credit. card which is masked upon save.</description>
        <inlineHelpText>3 digit Security Code found on the back of a credit card which is masked upon save.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>4</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rC_Event__Contact_Address_Type__c</fullName>
        <label>Contact Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Email__c</fullName>
        <description>Email of lead and contact</description>
        <inlineHelpText>Email of lead and contact</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Event__First_Name__c</fullName>
        <description>First Name of lead or contact</description>
        <inlineHelpText>First Name of lead or contact</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Guest_Of__c</fullName>
        <label>Guest Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only used for Visualforce page UI support.</description>
        <inlineHelpText>This field is only used for Visualforce page UI support.</inlineHelpText>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Is_Staged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to denote if the current record is a staged record why background processing is pending.</description>
        <inlineHelpText>Boolean flag to denote if the current record is a staged record why background processing is pending.</inlineHelpText>
        <label>Is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Item_ID__c</fullName>
        <label>Item 1: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Item_Name__c</fullName>
        <description>Indicates name of Item of type 1 purchased.</description>
        <inlineHelpText>Name of Item 1</inlineHelpText>
        <label>Item 1: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Purchase_Price__c</fullName>
        <label>Item 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Purchase_Quantity__c</fullName>
        <label>Item 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Item_ID__c</fullName>
        <label>Item 2: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Item_Name__c</fullName>
        <description>Indicates name of Item of type 2 purchased.</description>
        <inlineHelpText>Name of Item 2</inlineHelpText>
        <label>Item 2: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Purchase_Price__c</fullName>
        <label>Item 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Purchase_Quantity__c</fullName>
        <label>Item 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Item_ID__c</fullName>
        <label>Item 3: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Item_Name__c</fullName>
        <description>Indicates name of Item of type 3 purchased.</description>
        <inlineHelpText>Name of Item 3</inlineHelpText>
        <label>Item 3: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Purchase_Price__c</fullName>
        <label>Item 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Purchase_Quantity__c</fullName>
        <label>Item 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_ID_Quantity_Zero__c</fullName>
        <description>Stores Item Ids with quantity zero</description>
        <inlineHelpText>Stores Item Ids with quantity zero</inlineHelpText>
        <label>Item ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Last_Name__c</fullName>
        <description>Last Name of lead or contact</description>
        <inlineHelpText>Last Name of lead or contact</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 1 purchased.</description>
        <inlineHelpText>ID of meal Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 1 purchased.</description>
        <inlineHelpText>Price of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 1 purchased.</description>
        <inlineHelpText>Number of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 1 purchased.</description>
        <inlineHelpText>Status of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 2 purchased.</description>
        <inlineHelpText>ID of meal Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 2 purchased.</description>
        <inlineHelpText>Price of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 2 purchased.</description>
        <inlineHelpText>Number of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 2 purchased.</description>
        <inlineHelpText>Status of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 3 purchased.</description>
        <inlineHelpText>ID of meal Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 3 purchased.</description>
        <inlineHelpText>Price of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 3 purchased.</description>
        <inlineHelpText>Number of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 3 purchased.</description>
        <inlineHelpText>Status of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_ID_Quantity_Zero__c</fullName>
        <description>Stores Meal Ids with quantity zero</description>
        <inlineHelpText>Stores Meal Ids with quantity zero</inlineHelpText>
        <label>Meal ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Email__c</fullName>
        <formula>BLANKVALUE(Lead.Email, Contact.Email)</formula>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Name__c</fullName>
        <description>Formula field providing the Campaign Member&apos;s Full Name.</description>
        <formula>IF(NOT(ISBLANK(LeadId)), Lead.FirstName + &apos; &apos; + Lead.LastName, Contact.FirstName + &apos; &apos; + Contact.LastName)</formula>
        <inlineHelpText>Campaign Member&apos;s Full Name.</inlineHelpText>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Phone__c</fullName>
        <formula>BLANKVALUE(Lead.Phone, Contact.Phone)</formula>
        <label>Member Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Role__c</fullName>
        <description>Automatically populated, indicates the function a Campaign Member plays in an Event.</description>
        <inlineHelpText>Function this Campaign Member plays in an Event.</inlineHelpText>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Founder</fullName>
                </value>
                <value>
                    <fullName>Organizer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Event__Parent_Campaign_Member__c</fullName>
        <label>Parent Campaign Member</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Log__c</fullName>
        <description>Payment processor log</description>
        <inlineHelpText>Payment processor log</inlineHelpText>
        <label>Payment Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Method__c</fullName>
        <description>Manually populated, this field indicates the type of payment method.</description>
        <inlineHelpText>Type of payment method.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash/Check</fullName>
                </value>
                <value>
                    <fullName>Charge Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>